--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
-    <script src="p5.speech.js"></script>
-    <script src="p5main.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
   </body>
